--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.url= jdbc:h2:tcp://localhost/~/jpashop
+spring.datasource.username=sa
+spring.datasource.password=
+spring.sql.init.schema-locations=classpath:schema.sql
+spring.sql.init.mode=always
